--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Aprende a construir tu propio Jammer Bluetooth. Guía paso a paso en PDF para entusiastas de la electrónica.">
+        content="Aprende a construir tu propio Jafmmer Bluetooth. Guía paso a paso en PDF para entusiastas de la electrónica.">
     <meta name="keywords" content="curso electrónica, jammer bluetooth, tutorial pdf, proyectos arduino, esp32">
     <meta name="author" content="Ecuaplus Logic">
     <title>Guía Jammer Bluetooth | Aprende Electrónica Práctica</title>
@@ -107,7 +107,7 @@
                     <div class="flex flex-col sm:flex-row gap-4">
                         <a href="#comprar"
                             class="px-8 py-4 bg-accent-500 hover:bg-accent-600 text-white font-bold rounded-xl shadow-xl shadow-orange-500/20 transition-all text-center flex items-center justify-center gap-2">
-                            <span>Obtener la Guía por $19.99</span>
+                            <span>Obtener la Guía por $1.99</span>
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
@@ -338,16 +338,25 @@
                     <div class="text-center mb-8">
                         <p class="text-gray-500 font-medium">Acceso Completo</p>
                         <div class="flex items-center justify-center gap-1 mt-2">
-                            <span class="text-5xl font-extrabold text-gray-900">$19.99</span>
+                            <span class="text-5xl font-extrabold text-gray-900">$1.99</span>
                             <span class="text-gray-400 font-medium self-end mb-2">USD</span>
                         </div>
                     </div>
 
-                    <!-- PayPal Container -->
-                    <div id="paypal-button-container" class="w-full min-h-[50px] mb-4"></div>
+                    <!-- WhatsApp Button -->
+                    <a href="https://wa.me/593963947466?text=Hola,%20deseo%20adquirir%20la%20Gu%C3%ADa%20Bluetooth%20Educativa."
+                        target="_blank"
+                        class="block w-full bg-green-500 hover:bg-green-600 text-white font-bold py-4 rounded-xl text-center shadow-lg hover:shadow-green-500/30 transition-all transform hover:-translate-y-1 mb-4 flex items-center justify-center gap-2">
+                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.463 1.065 2.876 1.213 3.074.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
+                        </svg>
+                        Comprar por WhatsApp
+                    </a>
 
                     <p class="text-center text-xs text-gray-400 mt-4">
-                        Pago seguro procesado por PayPal. Garantía de devolución de 7 días si no estás satisfecho.
+                        Pagos aceptados vía Transferencia Bancaria o Depósito. Te enviaremos el PDF inmediatamente
+                        después de confirmar tu pago.
                     </p>
                 </div>
             </div>
