--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M5 13l4 4L19 7"></path>
                             </svg>
-                            <span>Código fuente completo (.ino/.cpp)</span>
+                            <span>Código fuente completo</span>
                         </li>
                         <li class="flex items-center gap-3">
                             <svg class="w-5 h-5 text-accent-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
