--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 class="animate-ping absolute inline-flex h-full w-full rounded-full bg-blue-400 opacity-75"></span>
                             <span class="relative inline-flex rounded-full h-2 w-2 bg-blue-500"></span>
                         </span>
-                        Nueva Edición 2026
+                        Ecuaplus Logic
                     </div>
                     <h1 class="text-5xl lg:text-6xl font-bold text-gray-900 leading-[1.1] mb-6">
                         Domina la señal <span
